--- a/app/index.html
+++ b/app/index.html
@@ -52,15 +52,14 @@
     </script>
 
     <script type='text/template' id='logout-template'>
-      <div id="user-info">
-        Signed in as <%= Parse.User.current().escape("username") %> (<a href="#" class="log-out">Log out</a>)
-      </div>
+    Signed in as <%= Parse.User.current().escape("username") %> (<a href="#" class="log-out">Log out</a>)
     </script>
 
     <script type="text/template" id="manage-todos-template">
 
-      <div class="section">
+<div id="user-info"></div>
 
+      <div class="section">
         <header id="header">
           <input id="new-todo" placeholder="What needs to be done?" type="text" />
         </header>
